--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>WT</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -141,52 +141,11 @@ header a {
   <p>Newest Additions</p>
   <div class="moviegrid">
     {% for img in imggrid %}
-    <a href="{{ 'movies/id={}'.format(img[1]) }}"><img src="{{url_for('static', filename=('images/{}'.format(img[0])))}}"></a>
+    <a href="{{ 'movies/{}'.format(img[1]) }}"><img src="{{url_for('static', filename=('images/{}'.format(img[0])))}}"></a>
     {% endfor %}
     <!--<img src="{{url_for('static', filename='/images/bp.jfif')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}">
-    <img src="{{url_for('static', filename='/images/movieph.jpg')}}"> -->
   </div>
 </div>
-
-<!-- <section>
-  <nav>
-    <ul>
-      <li><a href="#">London</a></li>
-      <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
-    </ul>
-  </nav>
-  
-  <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-  </article>
-</section>
-
-<footer>
-  <p>Footer</p>
-</footer> -->
 
 </body>
 </html>
